# vespa-chatgpt-plugin

./: .gitignore  README.md  prepare_index.ipynb  pyproject.toml
.well-known/: ai-plugin.json  openapi.yaml
datastore/: datastore.py  factory.py
datastore/providers/: pinecone_datastore.py
models/: api.py  models.py
server/: main.py
services/: chunks.py  date.py  embedding.py
