[tool.poetry]
name = "vespa-plugin"
version = "0.1.0"
description = ""
authors = ["Simon Lee <simon2020291@gmail.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.scripts]
start = "server.main:start"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pinecone-client = "^2.2.1"
tenacity = "^8.2.2"
arrow = "^1.2.3"
tiktoken = "^0.4.0"
langchain = "^0.0.174"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"
sentence-transformers = "^2.2.2"
torch = "1.13.1"
torchvision = "0.14.1"
torchaudio = "0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
